--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <h3>Do you want to check what we have to do today?</h3>
     </header>
     <section id="mainSection">
-        <input id="myInput" type="text" >
+        <input id="myInput" type="text" placeholder="e.x. Swim in the lake..." >
         <button class="button addBtn" onclick="addItems()">Add</button>
         <button class="button deleteBtn" onclick="deleteAllItems()">Delete All</button>
+        <div id="emptyInput"><p>You have to write something my little Duck!</p></div>
         <ul id="myUL"></ul>
     </section>
-    <footer>Made by Stavros & Eleftheria</footer>
+    <footer>Made by FreeDom</footer>
 <script src="index.js"></script>
 </body>
 </html>
